[package]
name = "credits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
crates_io_api = "0.8.1"
octocrab = "0.19.0"
reqwest = { version = "0.11.15", features = ["json"] }
semver = "1.0.17"
serde = {version="1.0.158", features=["derive"]}
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
